internet explorer image aspect ratio issue fix

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ menu_blog: yes
 	</li>
 	{% endif %}
 	{% if page.next.url %}
-	<li class="post-preview">
+	<li class="post-preview post-preview-right">
 		<div class="post-preview-content">
 			{% include post_preview_small.html post=page.next %}
 		</div>
