--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -76,8 +76,14 @@ menu_projekte: yes
 			</dl>
 		</div>
 	</div>
-</div>
 
+	<div class="row">
+	<div class="col-sm-8 col-sm-offset-2 col-xs-12">
+		<p><a href="{{ page.contact.website }}" class="highlight-link">Zur Projektwebseite</a></p>
+	</div>
+	</div>
+
+</div>
 
 <hr/>
 
