twittercard test blog entry

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   {% if page.title %}<meta name="twitter:title" content="{{ page.title }}">{% else %}<meta name="twitter:title" content="{{ site.title }}">{% endif %}
   {% if page.url %}<meta name="twitter:url" content="http://okfn.de{{ site.url }}{{ page.url }}">{% endif %}
   {% if page.description %}<meta name="twitter:description" content="{{ page.description }}">{% else %}<meta name="twitter:description" content="{{ site.description }}">{% endif %}
-  {% if page.image %}<meta name="twitter:image:src" content="http://okfn.de{{ site.url }}{{ page.image }}">{% else %}<meta name="twitter:image:src" content="http://okfn.de{{ site.staticurl }}images/logo_text.png">{% endif %}
+  {% if page.image %}<meta name="twitter:image:src" content="http://okfn.de{{ site.url }}{{ page.image }}">{% else %}<meta name="twitter:image:src" content="http://okfn.de{{ site.staticurl }}images/logo_black.png">{% endif %}
   {% endif %}
   <meta name="description" content="{{ page.description }}"/>
   <link href="{{ site.staticurl }}style/style.css" rel='stylesheet' type='text/css'>
