--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1288,6 +1288,10 @@ header {
     max-width: 600px;
   }
 
+  .share-post {
+    text-align: right;
+    font-size: 0.8em;
+  }
 }
 
 .other-posts {
