more social media links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-10 nav-items">
+				<div class="col-sm-10 col-xs-12 nav-items">
 					<ul>
 						<li{% if page.menu_team %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/team/">{% t navig.Team %}</a></li>
 						<li{% if page.menu_vorstand %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/vorstand/">{% t navig.Vorstand %}</a></li>
@@ -12,10 +12,12 @@
 						<li{% if page.menu_impressum %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/impressum/">{% t navig.Impressum %}</a></li>
 					</ul>
 				</div>
-				<div class="col-xs-2 nav-items nav-items-right">
+				<div class="col-sm-2 col-xs-12 nav-items nav-items-right">
 					<ul>
 						<li><a class="nav-link" href="https://twitter.com/okfde" title="OKF auf Twitter"><i class="icon-twitter"></i></a></li>
 						<li><a class="nav-link" href="https://github.com/okfde" title="OKF auf Github"><i class="icon-github"></i></a></li>
+						<li><a class="nav-link" href="https://www.flickr.com/photos/okfde" title="OKF auf Flickr"><i class="icon-flickr"></i></a></li>
+						<li><a class="nav-link" href="https://www.youtube.com/channel/UCUD8EFjXzRN-wFUbVTYlDAw" title="OKF auf Youtube"><i class="icon-youtube"></i></a></li>
 					</ul>
 				</div>
 			</div>
