--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -44,7 +44,7 @@ menu_projekte: yes
 				{% if page.contact.website %}
 				<dt><i class="icon-umbrella"></i></dt>
 				<dd>
-					<a href="{{ page.contact.website }}">{{ page.contact.website|replace_first:"http://"|replace_first:"https://" }}</a>
+					<a href="{{ page.contact.website }}">{{ page.contact.website }}</a>
 				</dd>
 				{% endif %}
 				{% if page.contact.twitter %}
