--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1259,6 +1259,12 @@ header {
     margin-bottom: 30px;
   }
 
+  .post-image-license {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 0.8em;
+  }
+
   @include MQ-S() {
     .post-image-full {
       height: 200px;
