--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1289,7 +1289,7 @@ header {
 
   iframe {
     display: block;
-    margin: 3px auto 30px;
+    margin: 30px auto 30px !important;
     width: 600px;
     max-width: 600px;
   }
