--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1042,7 +1042,12 @@ header {
     line-height: 1.5em;
     margin-top: 30px;
     margin-bottom: 30px;
+    img {
+      width: 100%;
+      margin-bottom: 30px;
+    }
   }
+
 }
 
 //team & vorstand page
