--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -851,6 +851,18 @@ header {
   }
 }
 
+// banner
+
+.start-datenschule-banner {
+  background-color: #fae6cb;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+
 //start page
 
 .start-banner {
