--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -104,3 +104,14 @@ menu_projekte: yes
 		</div>
 	</div>
 </div>
+
+<script>(function(d, s, id) {
+	var dsjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	var js = d.createElement(s); js.id = id;
+	js.src = "https://datenschule.de/banner.js";
+	js.async = true;
+	js.defer = true;
+	dsjs.parentNode.insertBefore(js, dsjs);
+}(document, 'script', 'datenschule-js'));
+</script>
