fixed some invalid html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,5 +27,5 @@
 
 		</ul>
 	</nav>
-	<a id="sidebar-trigger" href><span class="cd-menu-text">{% t navig.Mehr %}</span><span class="cd-menu-icon"></span></a>
+	<a id="sidebar-trigger" href="javascript:void(0)"><span class="cd-menu-text">{% t navig.Mehr %}</span><span class="cd-menu-icon"></span></a>
 </header>
