--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 					<p>{% t footer.license %}</p>
 				</div>
 				<div class="col-md-3 col-md-offset-1">
-					<a href="{{ site.baseurl }}"><img class="logo-cellar" src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
+					<a href="{{ site.baseurl }}"><img class="logo-cellar" src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowledge Foundation Deutschland e.V."></a>
 				</div>
 			</div>
 		</div>
