--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -4,8 +4,12 @@ menu_themen: yes
 
 ---
 
-<div class="lurking-header">
-  {{ content }}
+<div class="lurking-header topic">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="post-content">{{ content }}</div>
+    </div>
+  </div>
 </div>
 <hr />
 <h3 class="subtle-section">{% t thema.WeitereThemen %}</h3>
