einfache javascript blog-suche

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ menu_blog: yes
 			{% t blog.AmDatum %} {{ page.date | date:"%d.%m.%Y" }}
 		<ul class="post-tags">
 			{% for tag in page.tags %}
-			<li><a href="{{ site.baseurl }}/blog/tags/{{ tag }}/"><span class="badge">{{ tag }}</span></a></li>
+			<li><a href="{{ site.baseurl }}/blog/tags/{{ tag | downcase }}/"><span class="badge">{{ tag }}</span></a></li>
 			{% endfor %}
 		</ul>
 		</p>
