--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1219,6 +1219,19 @@ header {
 
 }
 
+// blog search page
+
+.search-container {
+  text-align: center;
+  #search-input {
+    width: 80%;
+  }
+}
+
+.search-result-container {
+
+}
+
 // blog post page
 
 .post {
