--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -5,9 +5,11 @@ layout: default
 	<h1>{% t blog.PostsMit %} &ldquo;{{page.tag}}&rdquo;</h1>
 </div>
 
+{% capture page_tag %}{{page.tag | downcase}}{% endcapture %}
 {% for post in site.posts %}
 {% for tag in post.tags %}
-{% if tag == page.tag %}
+{% capture post_tag %}{{tag | downcase}}{% endcapture %}
+{% if post_tag == page_tag %}
 {% include post_preview.html post=post %}
 {% endif %}
 {% endfor %}
